warning if data has not been loaded before experiment + updating readmes and properties